--- a/trafie/Base.lproj/Main.storyboard
+++ b/trafie/Base.lproj/Main.storyboard
@@ -2066,10 +2066,16 @@
                     <extendedEdge key="edgesForExtendedLayout" top="YES"/>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Your Profile" id="xIn-GZ-uPj">
-                        <barButtonItem key="rightBarButtonItem" title="Edit" id="Qi8-Y3-GQj">
+                        <barButtonItem key="leftBarButtonItem" title="Edit" id="Qi8-Y3-GQj">
                             <color key="tintColor" red="0.9862697712390962" green="0.98970232842932215" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
                                 <segue destination="l5D-zF-wi8" kind="presentation" id="5da-u0-Sxy"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="Wvm-rX-MiX">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <action selector="refreshProfile:" destination="11d-Lj-3z2" id="MJg-Os-szL"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
